--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
   <!-- Search box -->
   <div class="container py-3">
     <div class="form-row">
-      <div class="form-group col-md-11">
+      <div class="col-md-11">
         <input onClick="this.select()" type="url" class="form-control" id="input" placeholder="Enter url">
       </div>
-      <div class="form-group col-md-1">
+      <div class="col-md-1">
         <button id="button" class="btn btn-primary">Check</button>
       </div>
     </div>
@@ -89,7 +89,7 @@
 
   <div class="container">
     <footer class="pt-4 my-md-5 border-top">
-
+        <a href="https://github.com/aca18mj/stock-find-firebase"><img src="GitHub-Mark-64px.png" class="rounded mx-auto d-block" width="32" heigth="32"></a>
     </footer>
   </div>
 
