--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
   </div>
 
   <div class="container">
-    <footer class="pt-4 my-md-5 border-top">
+    <footer class="pt-4 my-md-5">
       <a href="https://github.com/aca18mj/stock-find-firebase"><img src="GitHub-Mark-64px.png"
           class="rounded mx-auto d-block" width="32" heigth="32"></a>
     </footer>
