--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,10 @@
         inset 0px 11px 10px -10px rgba(0, 0, 0, 0.3),
         inset 0px -11px 10px -10px rgba(0, 0, 0, 0.3);
     }
+
+    div.leaflet-popup-content > p {
+      margin: 0 !important
+    }
   </style>
 
   <title>Stock finder</title>
